Bug 388479 - SystemSettings Unable to delete icon themes.
Summary: SystemSettings Unable to delete icon themes.
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-01-03 07:48 UTC by Tony
Modified: 2018-01-08 15:19 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.12.0
Sentry Crash Report:


Attachments
Shoot of the dialog saying it could not delete (158.34 KB, image/png)
2018-01-03 07:48 UTC, Tony
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Tony 2018-01-03 07:48:11 UTC
Created attachment 109643 [details]
Shoot of the dialog saying it could not delete

Removing icon themes from SystemSettings > Icons using the "Remove Theme" button will always result in a popup saying it could not delete them.

There are no visible crashes or errors but this.

I can delete them manually without a problem.
This happens no matter how you installed them manually to ~/local/share/icons or using "Get New Themes".

openSuse tumbleweed + KDE unstable repos.
Comment 1 Burkhard Lück 2018-01-04 07:34:16 UTC
confirmed using neon-devedition-unstable
the theme ist only removed fron the list in the systemsettings module, but the files are still in .local/share/icons and also marked as installed in the "Get New Themes" dialog
Comment 2 Kai Uwe Broulik 2018-01-08 09:35:18 UTC
Git commit 08c0a73303dc0cc6f694a218f99b2d91cff24208 by Kai Uwe Broulik.
Committed on 08/01/2018 at 09:34.
Pushed by broulik into branch 'master'.

[Icons KCM] Construct QUrl from local file

CHANGELOG: Fixed bug that prevented icon themes from being uninstalled
FIXED-IN: 5.12.0

Differential Revision: https://phabricator.kde.org/D9651

M  +1    -1    kcms/icons/iconthemes.cpp

https://commits.kde.org/plasma-desktop/08c0a73303dc0cc6f694a218f99b2d91cff24208
Comment 3 Patrick Silva 2018-01-08 15:04:55 UTC
On Arch Linux, "Remove theme" button is not enabled when I select a theme to remove it.
Comment 4 Kai Uwe Broulik 2018-01-08 15:19:39 UTC
Please file a separate bug report for this.
However, you cannot remove system-wide installed (/usr) themes, only ones in your user folder downloaded through e.g. get hot new stuff