[Icons KCM] Construct QUrl from local file

CHANGELOG: Fixed bug that prevented icon themes from being uninstalled

BUG: 388479
FIXED-IN: 5.12.0

Differential Revision: https://phabricator.kde.org/D9651